jidelnicek3 funkcni template

--- a/jidelnicek/templates/jidelnicek2.html
+++ b/jidelnicek/templates/jidelnicek2.html
@@ -135,7 +135,7 @@
 		<p class="card-text ingredience">Budete potřebovat:</p>
 		<div class="zarovnaniingredienci ingredience">
 				{%  for ing in ingre51 %}
-				<label><input type="checkbox" value=""> {{ing}}</label>	</br>
+				<label><input type="checkbox" value="" name="check_ingre"> {{ing}}</label>	</br>
 				{% endfor %}
 		</div>
 		<a href="{{ nazev5.url }}"  target="_blank" button type="button" class="btn btn-success">Zobrazit recept</a>
