--- a/jidelnicek/templates/index.html
+++ b/jidelnicek/templates/index.html
@@ -26,13 +26,13 @@
 			<div class="zarovnani">
 				<div class="container-fluid">
 					
-					<h1 class="display-4 nadpis ex1">JÍDELNÍČEK</h1>
+					<h1 class="display-4 nadpis ex1">TÝDENÍČEK</h1>
 					<p class="lead paragraf1a2">Také si vždy lámete hlavu nad tím, co budete dnes vařit?</p>
 					<hr class="my-4">
 					<p class="paragraf1a2">Pojďte si s námi vytvořit jídelníček a nákupní seznam na příští týden a máte o starost méně!</p>
 					<br>
 					<!--href prosim nemen, musi tam byt toto, jinak to nebude fungovat-->
-					<a href="{{ url_for('jidelnicek') }}"  class="btn btn-success generuj" role="button">Co bude k obědu?</a>
+					<a href="{{ url_for('jidelnicek_plan') }}"  class="btn btn-success generuj" role="button">Co bude k večeři?</a>
 				</div>
 			</div>
 				<!-- <a href="index.html"><img src="cooking.jpg" alt="" class="pozadi">></a>//-->
