--- a/jidelnicek/templates/jidelnicek3.html
+++ b/jidelnicek/templates/jidelnicek3.html
@@ -162,7 +162,7 @@
 		</div>
 			<br>
 			<br>
-			<a class="btn btn-success generuj" href="{{ url_for('jidelnicek_plan_new') }}" role="button">Generuj nové recepty!</a>
+			<a class="btn btn-success generuj" href="{{ url_for('jidelnicek_plan') }}" role="button">Generuj nové recepty!</a>
 			<br>
 			<br>
 
