--- a/jidelnicek/templates/jidelnicek3.html
+++ b/jidelnicek/templates/jidelnicek3.html
@@ -157,7 +157,7 @@
 		<h3>Nákupní seznam</h3>		
 		<div class="checkbox">
 			{%  for ing in ingre11 %}
-			<li>{{ing}}</li>	</br>
+			<li>{{ing}}</li>
 			{% endfor %}
 		</div>
 			<br>
