--- a/jidelnicek/templates/jidelnicek2.html
+++ b/jidelnicek/templates/jidelnicek2.html
@@ -59,7 +59,11 @@
 		<!-- vypis ingredienci -->
 			<div class="zarovnaniingredienci ingredience">
 					{%  for ing in ingre11 %}
-					<label><input type="checkbox" value="" name="check_ingre"> {{ing}}</label>	</br>
+					<form method="post">
+						{{ form1.hidden_tag() }}
+						{{ form1.checkbox}} {{ing}}
+					</form>
+					<!--<label><input type="checkbox" value="" name="check_ingre"> {{ing}}</label>	</br>-->
 					{% endfor %}
 			</div>
 		<a href="{{ nazev1.url }}"  target="_blank"button type="button" class="btn btn-success" >Zobrazit recept</a>
@@ -78,8 +82,13 @@
 			<p class="card-text ingredience podtrzeni">Budete potřebovat:</p>
 			<div class="zarovnaniingredienci ingredience">
 					{%  for ing in ingre21 %}
-					<label><input type="checkbox" value=""> {{ing}}</label>	</br>
+					<form method="post">
+						{{ form2.hidden_tag() }}
+						{{ form2.checkbox}} {{ing}}
+					</form>
+					<!--<label><input type="checkbox" value="" name="check_ingre"> {{ing}}</label>	</br>-->
 					{% endfor %}
+					
 			</div>
 			<a href="{{ nazev2.url }}"  target="_blank" button type="button" class="btn btn-success">Zobrazit recept</a>
 		</div>
@@ -97,7 +106,11 @@
 			<p class="card-text ingredience podtrzeni">Budete potřebovat:</p>
 			<div class="zarovnaniingredienci ingredience">
 					{%  for ing in ingre31 %}
-					<label><input type="checkbox" value=""> {{ing}}</label>	</br>
+					<form method="post">
+						{{ form2.hidden_tag() }}
+						{{ form2.checkbox}} {{ing}}
+					</form>
+					<!--<label><input type="checkbox" value="" name="check_ingre"> {{ing}}</label>	</br>-->
 					{% endfor %}
 			</div>
 			<a href="{{ nazev3.url }}"  target="_blank" button type="button" class="btn btn-success">Zobrazit recept</a>
@@ -116,7 +129,11 @@
 			<p class="card-text ingredience podtrzeni">Budete potřebovat:</p>
 			<div class="zarovnaniingredienci ingredience">
 					{%  for ing in ingre41 %}
-					<label><input type="checkbox" value=""> {{ing}}</label>	</br>
+					<form method="post">
+						{{ form2.hidden_tag() }}
+						{{ form2.checkbox}} {{ing}}
+					</form>
+					<!--<label><input type="checkbox" value="" name="check_ingre"> {{ing}}</label>	</br>-->
 					{% endfor %}
 			</div>
 			<a href="{{ nazev4.url }}"  target="_blank" button type="button" class="btn btn-success">Zobrazit recept</a>
@@ -135,8 +152,12 @@
 		<p class="card-text ingredience podtrzeni">Budete potřebovat:</p>
 		<div class="zarovnaniingredienci ingredience">
 				{%  for ing in ingre51 %}
-				<label><input type="checkbox" value="" name="check_ingre"> {{ing}}</label>	</br>
-				{% endfor %}
+					<form method="post">
+						{{ form2.hidden_tag() }}
+						{{ form2.checkbox}} {{ing}}
+					</form>
+					<!--<label><input type="checkbox" value="" name="check_ingre"> {{ing}}</label>	</br>-->
+					{% endfor %}
 		</div>
 		<a href="{{ nazev5.url }}"  target="_blank" button type="button" class="btn btn-success">Zobrazit recept</a>
 	</div>
@@ -157,7 +178,12 @@
 			<p class="paragraf1a2">a pomocí tlačítka níže si vytvořte nákupní seznam.</p>
 			<br>
 			<br>
-			<a class="btn btn-success generuj" href="{{ url_for('jidelnicek_plan_seznam') }}" role="button">Mám hotovo! Chci vidět nákupní seznam</a>
+			<form method="post">
+					{{ form1.hidden_tag() }}
+						{{ form1.submit(class='btn btn-success generuj') }}
+			</form> 	
+		<!--		<a class="btn btn-success generuj" href="{{ url_for('jidelnicek_plan_seznam') }}" role="button">Mám hotovo! Chci vidět nákupní seznam</a>
+		-->
 			<br>
 			<br>
 
@@ -173,24 +199,11 @@
 		<li class="list-group-item"><label for="yes"><input type="radio" id="yes" name="vyberingredience" value="yes"></label></li>
 	</ul>-->
 
-<!--<ul class="list-group">
-		<li class="list-group-item">Jedna ingredience</li>
-		<li class="list-group-item">Druhá ingredience</li>
-		<li class="list-group-item">Třetí ingredience</li>
-		<li class="list-group-item">Čtvrtá ingredience</li>
-		<li class="list-group-item">Pátá ingredience</li>
-	</ul>-->
-
 	</div>
 
 	
 
 </div>
-
-
-
-<!--Vygeneruje seznam receptu - v image bude foto receptu, pod tím název, pod tím potřebné ingredience a pod tím odkaz přes tlačítko na web fitrecepty a tam je recept-->
-
 
 </body>
 </html>
