--- a/jidelnicek/templates/jidelnicek3.html
+++ b/jidelnicek/templates/jidelnicek3.html
@@ -144,7 +144,6 @@
 
 <br>
 </div>
-<!--Vygeneruje seznam receptu-->
 <br>
 <br>
 <br>
@@ -152,14 +151,14 @@
 <div>
 
 		
-		
 <div class="" style="width: 25rem; margin:auto">
 	<div class="pozadinakupseznamu">
 		<h3 class="paragraf1a2 podtrzeni">Nákupní seznam</h3>		
 		<div class="checkbox nakupniseznam">
-			{%  for ing in ingre11 %}
-			<li>{{ing}}</li>
-			{% endfor %}
+		<!--	{  for ses in form }-->
+				<li>checkbox1: {{session['checkbox']}}</li>
+				<li>checkbox2: {{session['checkbox']}}</li>
+		<!--	{ endfor }-->
 		</div>
 	</div>
 			<br>
@@ -193,11 +192,6 @@
 	
 
 </div>
-
-
-
-<!--Vygeneruje seznam receptu - v image bude foto receptu, pod tím název, pod tím potřebné ingredience a pod tím odkaz přes tlačítko na web fitrecepty a tam je recept-->
-
 
 </body>
 </html>
